--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <ul>
                 <li><a href="#about">My Profile</a></li>
                 <li><a href="#projects">My Projects</a></li>
+                <li><a href="#portfolio">My Portfolio</a></li>
                 <li><a href="#contact">My Contact</a></li>
             </ul>
         </nav>
@@ -61,6 +62,14 @@
             </div>
         </div>
     </section>
+
+    <!-- Portofolio Section -->
+    <section id="portfolio" class="section">
+        <h2>My Portfolio</h2>
+        <p>Here is a collection of additional projects that I have worked on. You can view my complete portfolio in Google Drive.</p>
+        <a href="https://drive.google.com/drive/folders/1yNYktpEy3UlCc9UBKO-Uy8_8czTOaqgj?usp=sharing" target="_blank">View Portfolio on Google Drive</a>
+    </section>
+
     <!-- Popup Modals for Projects -->
     <div id="popup1" class="popup">
         <button class="close" onclick="closePopup('popup1')" aria-label="Close popup">&times;</button>
@@ -96,6 +105,7 @@
             </div>
         </div>
     </div>
+    
     <section id="contact" class="section">
         <h2>Contact</h2>
         <p>Email: <a href="mailto:fathuralrohman16108@gmail.com">fathuralrohman16108@gmail.com</a></p>
